# llm-infer-cal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLI_PARAMS_ALIGNMENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
charts/llm-infer-cal/: Chart.yaml  values.yaml
charts/llm-infer-cal/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
crates/llm-infer-cal/: Cargo.toml
crates/llm-infer-cal-core/: Cargo.toml
crates/llm-infer-cal-core/data/: builtin_model_manifest.json  builtin_models.json
crates/llm-infer-cal-core/examples/: dump_report_values.rs
crates/llm-infer-cal-core/src/: engine_compat.rs  lib.rs
crates/llm-infer-cal-core/src/architecture/: detector.rs  mod.rs  profile.rs  traits.rs
crates/llm-infer-cal-core/src/architecture/formulas/: activation.rs  kv_cache.rs  mod.rs  weight.rs
crates/llm-infer-cal-core/src/benchmark/: runner.rs
crates/llm-infer-cal-core/src/command_generator/: mod.rs  sglang.rs  vllm.rs
crates/llm-infer-cal-core/src/common/: i18n.rs
crates/llm-infer-cal-core/src/core/: cache.rs  evaluator.rs  explain.rs  mod.rs
crates/llm-infer-cal-core/src/engine_compat/: loader.rs
crates/llm-infer-cal-core/src/fleet/: planner.rs
crates/llm-infer-cal-core/src/hardware/: loader.rs
crates/llm-infer-cal-core/src/llm_review/: mod.rs  reviewer.rs
crates/llm-infer-cal-core/src/model_source/: auth.rs  base.rs  builtin.rs  huggingface.rs  mod.rs  modelscope.rs
crates/llm-infer-cal-core/src/output/: formatter.rs  labels.rs  mod.rs
crates/llm-infer-cal-core/src/performance/: compute.rs  concurrency.rs  mod.rs
crates/llm-infer-cal-core/src/weight_analyzer/: fingerprint.rs  mod.rs  reconciler.rs  safetensors_reader.rs
crates/llm-infer-cal-core/tests/: benchmark.rs  cache.rs  command_generator.rs  detector.rs  engine_i18n.rs  evaluator.rs  explain.rs  formatter.rs  formulas.rs  huggingface_source.rs  labels.rs  llm_review.rs  model_source.rs  modelscope_source.rs  planning.rs  safetensors_reader.rs  weight_analyzer.rs
crates/llm-infer-cal-core/tests/fixtures/configs/: llama3_70b.json
crates/llm-infer-cal-web/: Cargo.toml
crates/llm-infer-cal-web/src/: lib.rs  main.rs
crates/llm-infer-cal-web/tests/: api.rs
crates/llm-infer-cal/src/: lib.rs  main.rs
crates/llm-infer-cal/tests/: cli_contract.rs
data/benchmark/: dataset.yaml
data/engine_compat/: matrix.yaml
docs/: architecture-guide.md  contributing.md  deployment.md  index.md  methodology.md  quickstart.md
docs/adr/: 001-modelscope-integration-strategy.md
docs/models/: deepseek-ai-deepseek-v3-b200.md  deepseek-ai-deepseek-v3-h100.md  deepseek-ai-deepseek-v3-h800.md  deepseek-ai-deepseek-v4-flash-910b4.md  deepseek-ai-deepseek-v4-flash-b200.md  deepseek-ai-deepseek-v4-flash-h100.md  deepseek-ai-deepseek-v4-flash-h800.md  index.md  microsoft-phi-4-l40s.md  microsoft-phi-4-rtx4090.md  mistralai-mixtral-8x7b-v0-1-a100-80g.md  mistralai-mixtral-8x7b-v0-1-h100.md  qwen-qwen2-5-72b-instruct-a100-80g.md  qwen-qwen2-5-72b-instruct-h100.md  qwen-qwen2-5-72b-instruct-h800.md  qwen-qwen2-5-7b-l40s.md  qwen-qwen2-5-7b-rtx4090.md  qwen-qwen3-30b-a3b-a100-80g.md  qwen-qwen3-30b-a3b-h100.md
docs/zh/: architecture-guide.md  contributing.md  index.md  methodology.md  quickstart.md
docs/zh/models/: deepseek-ai-deepseek-v3-b200.md  deepseek-ai-deepseek-v3-h100.md  deepseek-ai-deepseek-v3-h800.md  deepseek-ai-deepseek-v4-flash-910b4.md  deepseek-ai-deepseek-v4-flash-b200.md  deepseek-ai-deepseek-v4-flash-h100.md  deepseek-ai-deepseek-v4-flash-h800.md  index.md  microsoft-phi-4-l40s.md  microsoft-phi-4-rtx4090.md  mistralai-mixtral-8x7b-v0-1-a100-80g.md  mistralai-mixtral-8x7b-v0-1-h100.md  qwen-qwen2-5-72b-instruct-a100-80g.md  qwen-qwen2-5-72b-instruct-h100.md  qwen-qwen2-5-72b-instruct-h800.md  qwen-qwen2-5-7b-l40s.md  qwen-qwen2-5-7b-rtx4090.md  qwen-qwen3-30b-a3b-a100-80g.md  qwen-qwen3-30b-a3b-h100.md
scripts/: generate_model_pages.py  update_builtin_catalog.rb  update_builtin_manifest.rb
src/llm_cal/: __init__.py  cli.py
src/llm_cal/architecture/: detector.py  profile.py  traits.py
src/llm_cal/architecture/formulas/: kv_cache.py  weight.py
src/llm_cal/benchmark/: dataset.yaml  runner.py
src/llm_cal/command_generator/: sglang.py  vllm.py
src/llm_cal/common/: i18n.py  yaml_loader.py
src/llm_cal/core/: cache.py  evaluator.py  explain.py
src/llm_cal/engine_compat/: loader.py
src/llm_cal/fleet/: planner.py
src/llm_cal/hardware/: gpu_database.yaml  loader.py
src/llm_cal/llm_review/: reviewer.py
src/llm_cal/model_source/: auth.py  base.py  huggingface.py  modelscope.py
src/llm_cal/output/: formatter.py  labels.py
src/llm_cal/performance/: compute.py  concurrency.py
src/llm_cal/weight_analyzer/: __init__.py  fingerprint.py  reconciler.py  safetensors_reader.py
tests/: conftest.py  test_benchmark.py  test_cache.py  test_cli_parity.py  test_command_generator.py  test_compute_nvlink.py  test_detector.py  test_engine_compat.py  test_evaluator.py  test_fingerprint.py  test_fleet_planner.py  test_formulas.py  test_hardware.py  test_i18n.py  test_labels.py  test_live_modelscope_value_parity.py  test_llm_review.py  test_modelscope_source.py  test_safetensors_reader.py  test_weight_reconciler.py
tests/fixtures/configs/: deepseek_v4_flash.json  mamba.json  mistral_sliding.json  unknown_model.json
web/frontend/: e2e.test.ts  index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.test.tsx  App.tsx  api.ts  report.test.ts  report.ts  styles.css
web/frontend/test-results/: .last-run.json
web/frontend/test-results/e2e-llm-infer-cal-web-UI-multi-GPU-comparison/: error-context.md
(+1 files in other folders)
