[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llm-infer-cal"
description = "LLM inference hardware calculator — architecture-aware, engine-version-aware, honest-labeled."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "xrwang8" }]
keywords = ["llm", "inference", "vllm", "sglang", "gpu", "vram", "calculator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.5.0",
  "huggingface-hub>=0.24.0",
  "modelscope>=1.20.0",
  "safetensors>=0.4.0",
  "diskcache>=5.6.0",
  "platformdirs>=4.0.0",
  "packaging>=23.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "responses>=0.25.0",
  "pre-commit>=3.7.0",
  "types-PyYAML",
]

[project.scripts]
llm-infer-cal = "llm_cal.cli:main_entry"

[project.urls]
Homepage = "https://github.com/xrwang8/llm-infer-cal"
Repository = "https://github.com/xrwang8/llm-infer-cal"
Issues = "https://github.com/xrwang8/llm-infer-cal/issues"

# Matrix entries > 100 时启用 common/yaml_loader.py 的 lazy 模式（v0.2）
# 见 docs/adr/002-lazy-matrix-loading.md (未来)

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cal"]

[tool.hatch.build.targets.wheel.force-include]
"src/llm_cal/engine_compat/matrix.yaml" = "llm_cal/engine_compat/matrix.yaml"
"src/llm_cal/hardware/gpu_database.yaml" = "llm_cal/hardware/gpu_database.yaml"
"src/llm_cal/benchmark/dataset.yaml" = "llm_cal/benchmark/dataset.yaml"

[tool.hatch.build.targets.sdist]
include = [
  "src/llm_cal",
  "data",
  "README.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "N",    # pep8-naming
]
ignore = [
  "E501",  # line-too-long — let the formatter handle
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N"]
# Modules with intentional full-width Chinese punctuation or × multiplication signs
# in docstrings/comments (methodology citations, unit formulas).
"src/llm_cal/common/i18n.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/fleet/planner.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/model_source/auth.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/performance/compute.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/performance/concurrency.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/hardware/loader.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/core/explain.py" = ["RUF001", "RUF002", "RUF003"]
"src/llm_cal/llm_review/reviewer.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_i18n.py" = ["B", "N", "RUF001", "RUF002", "RUF003"]
"tests/test_llm_review.py" = ["B", "N", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["modelscope.*", "diskcache.*", "huggingface_hub.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.coverage.run]
source = ["src/llm_cal"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
