[package]
name = "llm-infer-cal-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7"
llm-infer-cal-core = { path = "../llm-infer-cal-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
