[package]
name = "llm-infer-cal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
llm-infer-cal-core = { path = "../llm-infer-cal-core" }

[dev-dependencies]
serde_json = "1"

[[bin]]
name = "llm-infer-cal"
path = "src/main.rs"
